# Multiprocessing

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
app/: background_task.py  cluster.py  main.py  seed.py
app/db/: connection.py
app/db/repository/mongodb/: school.py
app/db/repository/postgres/: students.py
